# Voice_Assistant

./: .gitignore  frames.py  main.py  pyproject.toml  render.yaml  test_whishperx.py
Ayurveda-ai/: .gitignore  Hackathon.txt  README.md  inference.py  requirements.txt
Ayurveda-ai/agents/: __init__.py  dosha_agent.py  guidance_agent.py  safety_agent.py  symptom_agent.py  vision_agent.py
Ayurveda-ai/api/: main.py
Ayurveda-ai/app/: main.py
Ayurveda-ai/dataset/: ayurveda_finetune.json
Ayurveda-ai/frontend/: index.html
Ayurveda-ai/graph/: pipeline.py
Ayurveda-ai/scripts/: evaluate.py  finetune_medgemma.py  generate_charts.py  write_agents.py
agents/: alert_agent.py  appointment_agent.py  ayurveda_agent.py  medical_scribe.py  summary_agent.py
api/: routes.py  websocket.py
frontend/: index.html  package-lock.json  package.json  server.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/context/: AppContext.jsx
frontend/src/pages/: Appointments.jsx  Dashboard.jsx  DoctorAvailability.jsx  PatientAppointments.jsx  PatientBook.jsx  PatientHome.jsx  PatientVoice.jsx  Reports.jsx  RoleSelector.jsx  Scribe.jsx
frontend/src/utils/: parseResult.js  pdf.js
models/: kokoro_tts.py  llm.py  llm2.py  pyannote.py  whisper_stt.py
pipelines/: agent_pipeline.py  voice_pipeline.py
prompts/: alert_prompt.py  medical_prompt.py  summary_prompt.py
whisperx_test/: test.py  test2.py
