[project]
name = "voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "kokoro>=0.9.4",
    "langchain-groq>=1.1.3",
    "peft>=0.19.1",
    "pipecat-ai>=1.3.0",
    "python-dotenv>=1.2.2",
    "soundfile>=0.14.0",
    "whisperx>=3.8.6",
]
